force-app/main/default/objects/Demand_Letter_Config__c/Demand_Letter_Config__c.object-meta.xml
<CustomObject>
    <description>Project-wise demand letter configuration for email and document templates</description>
    <label>Demand Letter Config</label>
    <nameField>
        <displayFormat>DLC-{0000}</displayFormat>
        <label>Config Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demand Letter Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>