force-app/main/default/objects/Demand_Letter_Config__c/fields/Auto_Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Auto_Send_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Send Email</label>
    <type>Checkbox</type>
</CustomField>