force-app/main/default/objects/Demand_Letter_Config__c/fields/Document_Template__c.field-meta.xml
<CustomField>
    <fullName>Document_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Template</label>
    <referenceTo>Document_Template__c</referenceTo>
    <relationshipLabel>Demand Letter Configs</relationshipLabel>
    <relationshipName>Demand_Letter_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>