force-app/main/default/objects/Demand_Letter_Config__c/fields/Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Email_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email Template</label>
    <referenceTo>Email_Template_Config__c</referenceTo>
    <relationshipLabel>Demand Letter Configs</relationshipLabel>
    <relationshipName>Demand_Letter_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>