force-app/main/default/objects/Demand_Letter_Config__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Demand Letter Configs</relationshipLabel>
    <relationshipName>Demand_Letter_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>